[project]
name = "all-the-predators-friends"
version = "0.1.0"
description = "A GraphRAG application for investigating Jeffrey Epstein's sex tafficking ring"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fsspec>=2025.10.0",
    "huggingface-hub>=1.1.5",
    "ipywidgets>=8.1.8",
    "pandas>=2.3.3",
    "srsly>=2.5.2",
    "tqdm>=4.67.1",
]
